--- a/source/_posts/2013-06-15-india.markdown
+++ b/source/_posts/2013-06-15-india.markdown
@@ -11,6 +11,23 @@ Arrived late with an airport transfer, the roads of india didnt seem too crazy a
 
 woke the next day and went out in search of an ATM so I could get some Rupees and some breakfast. The ATM was easy enough, although the max withdrawal was less than AUD$200, another win for my overseas fee free credit card. I'd hate to be getting socked with $5-10 foriegn ATM fees for every $200 I needed.
 
-Breakfast wasnt so easy to find. The area the hotel was in, Karol Barg, seemed to be mostly closed, which seemed a bit annoying in a country where it's so hot to be shut for the coolest part of the day. A persistant "guide" and his auto-rickshaw driver finally wore me down after following me for about 15 minutes while I walked and failed to find anywhere open with food. They took me to a south indian street food place where I had dosa and vegetable curry, which was actually really good, so I decided to stick with them for a while. That turned out to be a mistake, they took me to a shitty "handi-craft" market.
+Breakfast wasnt so easy to find. The area the hotel was in, Karol Barg, seemed to be mostly closed, which seemed a bit annoying in a country where it's so hot to be shut for the coolest part of the day. A persistent "guide" and his auto-rickshaw driver finally wore me down after following me for about 15 minutes while I walked and failed to find anywhere open with food. They took me to a south indian street food place where I had dosa and vegetable curry, which was actually really good, so I decided to stick with them for a while. That turned out to be a mistake, they took me to a shitty "handi-craft" market.
 
 maybe it wasnt shitty, but I just honstely dont give two shits about handi-crafts, and even less so about stuff so generic that you could say it was from anywhere in south east asia. I did a quick walk through, still trying to be polite at this point, but really just wanted to get out of there. I went back out to the rickshaw and asked them to take me to a real market, you know, with like the baskets of spice and stuff that might make nice photos. The drove me to another shitty tourist shop (writing market on your sign doesnt make it a market), I was getting fed up with it at this point and didnt even get out of the tuk tuk and asked to be taken somewhere I could have a chai. They instead took me to the tourist travel agent to get a free map, which the guy inside told me cost 500 rupees, so I left empty handed. The rickshaw then took me to "a great place for tea", which was another air conditioned tourist shop selling dried tea. I got fed up and told the guide to stop wasting both our time with tourist traps as I was flat out not interested, take me to the sort of place where he would actually drink chai of a morning. I think he got a bit pissy but the rickshaw driver seemed to get it and walked with me down the street 100m to a little hole in the wall where we had tiny little cups of chai masala. it was very yummy, but the shot size plastic cups were not exactly satisfying
+
+met up with guide and the one other person starting the tour, Nicolle. We were briefed on what was planned for the next 2 weeks, filled out some forms and had an early night.
+
+next day we went on a tour of the old city, saw some mosque where they wouldnt let nicole in and you had to pay $12 to take in a camera, so I went in by myself for about 5 minutes and left. We went to a sikh temple, learned about how they dont cut their hair or beards because they believe it shows their wisdom, and how big turbans are full of lots of hair. We then had breakfast in a little parantha shop that made some amazing food. I had a cashew nut parantha and it was really something special.
+
+In the afternoon Nicolle and I  went in search of snacks for the overnight train, and made a trip to the police station to make a report about nicolle's camera that was stolen from her the day before. That night Moon took us to the train station where we boarded our overnight train where we had 3 beds out of a 6 berth sleeper carraige with a few regular indian people in the other beds. For at least the first few hours the food and drink guys were constantly walking up and down the isle saying "Chai, chai, chai! garam chai!" (Hot tea) or "Omlette, Omlette, Omlette" and made it seem a bit pointless having brought our own snacks.
+
+I got a pretty decent nights sleep and in the morning (running a few hours late) we arrived in Varanasi. We checked into our hotel and took some time to freshen up.
+went and ate lunch at a very tasty restaurant, then walked down to the ghats. nicolle and moon went back to the hotel to relax, I decided to explore a bit.
+
+
+
+
+
+
+
+
