--- a/source/_posts/2013-06-15-thailand.markdown
+++ b/source/_posts/2013-06-15-thailand.markdown
@@ -7,10 +7,46 @@ categories:
 description: 
 priority: 0.5
 ---
-first day, saumi. dodgy moto taxi that overshot lemai significantly. rain storm. 
+My first day in Thailand I arrived in Koh Saumi. dodgy moto taxi that overshot lemai significantly. rain storm. 
 lazy day at the resort, lemai repaired my opinion of samui significantly. lots of germans? met welsh ex-pat couple, complained about the heat even though I thought it was cool compared to cambodia.
 ferry to koh tao, horrible time finding _any_ accomodation. didnt realise at the time, due to full moon party the weekend before. fuck full moon parties. initial feels about the place were that it had changed, not in a good way. first hotel called itself a resort, but was only half finished and very overpriced. room hardly furnished, no screens on the windows of a fan room. went and met rolf who runs the koh tao central hostel, got a quick tour of the hostel which was significantly cheaper than where I was, air conditioned, newly built (so everything is working and clean) and actually offered the chance to meet people. booked in for the next available night.
 
 had a drink and wrote some stuff in a bar over the road. a pretty girl I later got to know as Liane sparked up a converstaion and I found out she was diving with crystal, where I originally got certified. she asked about accomodation, planning where she'd stay after the free accom from the course ran out, and I gave the hostel a plug. later after she'd left, rolf from the hostel came over and had a beer, wanting to know how I'd found out about the hostel and if I had any ideas for the place. Apparently it only opened a few weeks earlier, and he was quite keen to make it a success so he was asking for feedback pretty much everytime I saw him.
 
-started diving with master divers, the no. 1 rated outfit on tripadvisor. priced a bit high, but the price comes down retrospectively the more dives you do with them. The staff there were lovely, but because they were a small shop and it was low season the boats only go out once a day, and mostly to open water suitable sites (almost nothing deeper than 18M)
+I started diving with master divers, the no. 1 rated outfit on tripadvisor. It seemed priced a bit high, but the price came down retrospectively the more dives you did with them. The staff there were lovely, but because they were a small shop and it was low season the boats only go out once a day, and mostly to open water suitable sites (almost nothing deeper than 18M).
+
+After a few days I decided to seek out shops day to day, based on where there boats were going. I went back to Crystal where I first learned to dive and got to Dive Chumphon Pinnicle, one of the nicest sites in Koh Tao, and the HMTS Satakkut, a scuttled navy war ship. Saw loads of yellow tail barracuda, titan trigger fish, banner fish, angel fish... the list in my log book is too long to keep going.
+
+The day after I booked in with another little shop who were doing their weekly run out to Sail Rock, which is said to be the best site in the area, but it's a 2 hour boat trip to get to so the shops dont go there so regularly. Sea-sick tablets kept me feeling fine for the whole trip, the two dives there were awesome, although the visibility was much worse than anywhere closer to Koh Tao.
+
+The next shop I went to were once again going to Chumphon and Green rock. I managed to spot lots of very tiny sealife on the rocks, and a few juvinille banner fish which were so damn cute. The staff were all super friendly and I expressed interest in going to southwest, and they told me it was pencilled in for 2 days time so they put my name down for that and locked in that as the site for that day.
+
+Southwest was where I did my first deep dive during my Advanced Open Water, and revisiting it was just as I remembered it. A huge pinnicle covered in annenomes, swarming wiht pinkk clown fish. We dropped right down to the sand and circled around a bit on the sea floor and managed to find some Cobias (They look like sharks, except they're a fish).
+
+I liked the shop a lot and had been thinking about getting a few more certifications (since they're cheap on ko tao, and could be useful diving elsewhere), so when I found out they had a package for the very 3 specialties I'd been thinking about, plus accomodation at a cheaper price than anywhere else I'd been I decided it was meant to be. I did the 6 dives over 3 days and got my Deep specialty allowing me to go to 40M, my Nitrox speciallty allowing me to use Air enriched with extra oxygen allowing longer dives without decompression, and my wreck specialty, allowing me to explore inside of wreck and taught me how to lay line in order to find my way out again in case of complete loss of visibility.
+
+I'd originally had vague intentions of diving on Koh Tao for 6-7 days, then heading to the Phukett side for the remaining part of my time, but after hearing how bad the weather was from a few people, and peoples general dislike of Phukett from a few people I ended up staying on Ko Tao for "just one more night" until the very day before my flight out, and got the night boat and a bus to get to Phukett and head straight to the airport.
+
+The night boat was quite an experience! You show up and give them your ticket and they assign you a "bed", where the beds are numbered mattresses on the floor on either side of the boat, barely wide enough to lie down flat on without touching the shoulders of the person next to you. I got bed 1, which meant I only had a person on one side of me and some railings on the other side. I had a Valium and read for a while before getting drowsy and donning eye shades (best thing ever for a traveller, I got fancy shaped ones of ebay for $3 that dont actually touch your eyelides and black everything out) and promptly drifting off to sleep.
+
+I woke up a few times throughout the night and my gosh were the seas choppy. It felt like the boat was swaying around quite considerablly and at one point a big wave hit the side of the boat and came in some of the windows at the other end, resulting in some suddenly awake screams of shock from some poeple who got wet by it.
+
+I noted at one point that I could see a few life-jackeets, but also that I could see that the number I could see was far less than the 70-80 odd people on board. That's the sort of thing you notice and then try to ignore.
+
+We arrived at Surat Thani safe and sound, and early! There was a minivan that took us too a bus stop where we waited for an hour. A tuk-tuk/jeep thingy finally arrived to take the passengers to Phukett, thankfully only for about 10 minutes to another shop where we could buy breakfast and wait for another hour for the bus.
+
+The actual bus arrived, a nice coach, and proceeded to drive for another 10 minutes before stopping "for more passengers" (who never turned up) for another hour! Once we finally left there we continued on with no more stops, and the bus was so empty that I was able to lie down flat on one of the bench seats towards the back and sleep for a lot of the journey.
+
+We arrived in Phukett town bus station, where it was pissing down with rain. I asked about shuttles to the airport and was told they left from further in town but I could get a taxi for nearly as much as the whole journey from Koh Tao had cost me.
+
+I went and got some lunch and waited for a few hours but the rain didn't ease up, and I didn't find anyone else wanting to go to the airport,  so I eventually got a Taxi there myself.
+
+Checkin was a bit of an ordeal. I'd looked up what desks were supposed to be for my flight to India, got a trolly and waited there reading, expecting to be first in line. As I waited, probably 100 noisy Indians in very large groups arrived, with mountains of luggage and flat screen TVs, and queued up at desks, but none of them behing me. I should have realised something was up, but I went and checked the screen a few times and the desk I was at was definitely supposed to be for my flight.
+
+When the info finally came up on the screens above the desks it turned out my line was business class. Bugger! I figured I was screwed either way so I kept waiting there for the gates to open in the hope they might check me in anyway, but after they finally started checking in people, there was no staff memeber for the business class desk anyway, so I had to go to the back of the line; no offer from the huge groups who'd queue up well after me to check in my single passenger with a single bag.
+
+After waiting for a while in a line that didnt move (it takes a long time to check in a group of 20) I got fed up and wandered over to the queueless desks for the same airline I was flying with that said "all flights" above them and asked if all flights included my flight, which seemed to had been singled out with its own desks for some reason.
+
+I was extremely happy to find out it did, so I snuck back and grabbed my bags from the other queue and went and checked straight in, finishing before even the first group from the long queue was done! Huzzah for being observent and asking questions. Emergengy row with extra legroom to boot!
+
+Onward to India!
